--- a/mia/Views/Common/HXInfectUserListView/HXInfectUserListCell.xib
+++ b/mia/Views/Common/HXInfectUserListView/HXInfectUserListCell.xib
@@ -30,11 +30,21 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分享着动态" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7W6-5E-Eld">
-                        <rect key="frame" x="102" y="43" width="210" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="分享着动态" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7W6-5E-Eld">
+                        <rect key="frame" x="175" y="43" width="137" height="21"/>
                         <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" red="0.50196078430000002" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="最近分享:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nNT-fG-ie7">
+                        <rect key="frame" x="102" y="43" width="73" height="21"/>
+                        <animations/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="73" id="YVI-cK-KjH"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -43,10 +53,12 @@
                     <constraint firstItem="xmb-UV-xMm" firstAttribute="top" secondItem="Ivf-pj-x2E" secondAttribute="top" constant="12" id="2Hq-Yr-GtB"/>
                     <constraint firstItem="Jaa-tB-u67" firstAttribute="bottom" secondItem="xmb-UV-xMm" secondAttribute="centerY" constant="-3" id="8Ce-Dl-aH1"/>
                     <constraint firstItem="Jaa-tB-u67" firstAttribute="leading" secondItem="xmb-UV-xMm" secondAttribute="trailing" constant="16" id="Fxb-fo-nv7"/>
+                    <constraint firstItem="7W6-5E-Eld" firstAttribute="leading" secondItem="nNT-fG-ie7" secondAttribute="trailing" id="GdL-pv-KxP"/>
                     <constraint firstAttribute="bottom" secondItem="xmb-UV-xMm" secondAttribute="bottom" constant="12" id="WhB-Qd-tAP"/>
-                    <constraint firstItem="7W6-5E-Eld" firstAttribute="leading" secondItem="xmb-UV-xMm" secondAttribute="trailing" constant="16" id="ZBV-lI-zUE"/>
                     <constraint firstItem="7W6-5E-Eld" firstAttribute="top" secondItem="xmb-UV-xMm" secondAttribute="centerY" constant="3" id="aMq-8r-C4R"/>
+                    <constraint firstItem="nNT-fG-ie7" firstAttribute="top" secondItem="xmb-UV-xMm" secondAttribute="centerY" constant="3" id="mPq-SF-ayT"/>
                     <constraint firstItem="xmb-UV-xMm" firstAttribute="leading" secondItem="Ivf-pj-x2E" secondAttribute="leading" constant="30" id="paD-dV-C2I"/>
+                    <constraint firstItem="nNT-fG-ie7" firstAttribute="leading" secondItem="Jaa-tB-u67" secondAttribute="leading" id="vgc-Ij-4QQ"/>
                     <constraint firstAttribute="trailing" secondItem="7W6-5E-Eld" secondAttribute="trailing" constant="8" id="w5O-5k-5E3"/>
                     <constraint firstAttribute="trailing" secondItem="Jaa-tB-u67" secondAttribute="trailing" constant="8" id="zdF-zQ-Eue"/>
                 </constraints>
