--- a/mia/Base.lproj/HomePage.storyboard
+++ b/mia/Base.lproj/HomePage.storyboard
@@ -109,7 +109,7 @@
                                     <constraint firstAttribute="width" constant="32" id="HwM-rn-UP3"/>
                                     <constraint firstAttribute="width" secondItem="97C-zd-yXF" secondAttribute="height" multiplier="1:1" id="JWT-kJ-duk"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <state key="normal" image="HP-ProfileIcon"/>
                                 <connections>
                                     <action selector="profileButtonPressed" destination="Vwv-7l-Pgq" eventType="touchUpInside" id="zRS-VX-wCN"/>
@@ -152,17 +152,17 @@
                                         <animations/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="妙推成功" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ic0-aV-MRw">
-                                        <rect key="frame" x="44" y="59" width="72" height="22"/>
+                                        <rect key="frame" x="48" y="58" width="64" height="20"/>
                                         <animations/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="说说你的想法" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nl7-Tv-v26">
-                                        <rect key="frame" x="26" y="79" width="108" height="22"/>
+                                        <rect key="frame" x="32" y="82" width="96" height="20"/>
                                         <animations/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" red="0.50196078430000002" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="JKz-RM-aIq">
@@ -172,16 +172,16 @@
                                             <constraint firstAttribute="height" constant="60" id="GmC-cI-aeu"/>
                                         </constraints>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="send"/>
                                         <connections>
                                             <outlet property="delegate" destination="i7R-7R-kAw" id="hn2-ik-TOk"/>
                                         </connections>
                                     </textView>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GFl-sp-KPY">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GFl-sp-KPY">
                                         <rect key="frame" x="63" y="105" width="34" height="33"/>
                                         <animations/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <state key="normal" title="发送">
                                             <color key="titleColor" red="0.23921568630000001" green="0.77647058820000003" blue="0.71372549019999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
@@ -189,11 +189,22 @@
                                             <action selector="sendButtonPressed" destination="i7R-7R-kAw" eventType="touchUpInside" id="yps-Ck-d7p"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OVV-CR-7XL">
-                                        <rect key="frame" x="10" y="10" width="140" height="140"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="还没有登录哦 -_-# " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WRA-3k-bX6">
+                                        <rect key="frame" x="12" y="60" width="136" height="20"/>
                                         <animations/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <state key="normal" title="登录">
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" red="0.50196078430000002" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OVV-CR-7XL">
+                                        <rect key="frame" x="12" y="67" width="136" height="66"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="66" id="IT5-lf-DBv"/>
+                                            <constraint firstAttribute="width" constant="136" id="Q4p-ag-dDj"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <state key="normal" title="马上登录">
                                             <color key="titleColor" red="0.23921568630000001" green="0.77647058820000003" blue="0.71372549019999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
@@ -205,28 +216,29 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="JKz-RM-aIq" secondAttribute="trailing" constant="20" id="2Vc-qT-m8G"/>
-                                    <constraint firstAttribute="bottom" secondItem="OVV-CR-7XL" secondAttribute="bottom" constant="10" id="3Sf-Ht-viz"/>
                                     <constraint firstItem="GFl-sp-KPY" firstAttribute="centerX" secondItem="JKz-RM-aIq" secondAttribute="centerX" id="9Fc-GZ-HIb"/>
                                     <constraint firstItem="JKz-RM-aIq" firstAttribute="centerY" secondItem="i7R-7R-kAw" secondAttribute="centerY" constant="-5" id="E3E-Ab-Ovw"/>
                                     <constraint firstItem="Ic0-aV-MRw" firstAttribute="centerX" secondItem="i7R-7R-kAw" secondAttribute="centerX" id="FdV-7d-KXl"/>
                                     <constraint firstItem="JKz-RM-aIq" firstAttribute="leading" secondItem="i7R-7R-kAw" secondAttribute="leading" constant="20" id="Gqu-7X-999"/>
                                     <constraint firstAttribute="bottom" secondItem="rZD-az-a6y" secondAttribute="bottom" id="Hz7-9t-wsD"/>
+                                    <constraint firstItem="WRA-3k-bX6" firstAttribute="centerY" secondItem="i7R-7R-kAw" secondAttribute="centerY" constant="-10" id="MqX-m4-K1E"/>
                                     <constraint firstAttribute="trailing" secondItem="rZD-az-a6y" secondAttribute="trailing" id="NaB-Fi-o6j"/>
-                                    <constraint firstAttribute="trailing" secondItem="OVV-CR-7XL" secondAttribute="trailing" constant="10" id="PiA-ps-bLt"/>
-                                    <constraint firstItem="nl7-Tv-v26" firstAttribute="centerY" secondItem="i7R-7R-kAw" secondAttribute="centerY" constant="10" id="SKZ-FL-glv"/>
+                                    <constraint firstItem="nl7-Tv-v26" firstAttribute="centerY" secondItem="i7R-7R-kAw" secondAttribute="centerY" constant="12" id="SKZ-FL-glv"/>
                                     <constraint firstItem="rZD-az-a6y" firstAttribute="leading" secondItem="i7R-7R-kAw" secondAttribute="leading" id="Sz6-O8-5U2"/>
-                                    <constraint firstItem="OVV-CR-7XL" firstAttribute="leading" secondItem="i7R-7R-kAw" secondAttribute="leading" constant="10" id="bIJ-XF-NV2"/>
+                                    <constraint firstItem="OVV-CR-7XL" firstAttribute="centerY" secondItem="i7R-7R-kAw" secondAttribute="centerY" constant="20" id="Wgb-jE-mqV"/>
+                                    <constraint firstItem="WRA-3k-bX6" firstAttribute="centerX" secondItem="i7R-7R-kAw" secondAttribute="centerX" id="X6M-h6-h5a"/>
+                                    <constraint firstItem="OVV-CR-7XL" firstAttribute="centerX" secondItem="i7R-7R-kAw" secondAttribute="centerX" id="aZW-wT-6Z7"/>
                                     <constraint firstAttribute="width" secondItem="i7R-7R-kAw" secondAttribute="height" multiplier="1:1" id="gXr-zl-kpH"/>
                                     <constraint firstItem="rZD-az-a6y" firstAttribute="top" secondItem="i7R-7R-kAw" secondAttribute="top" id="jRJ-uD-tIV"/>
                                     <constraint firstItem="GFl-sp-KPY" firstAttribute="top" secondItem="JKz-RM-aIq" secondAttribute="bottom" id="kMd-v3-2I6"/>
                                     <constraint firstItem="nl7-Tv-v26" firstAttribute="centerX" secondItem="i7R-7R-kAw" secondAttribute="centerX" id="lQd-K0-p8o"/>
-                                    <constraint firstItem="Ic0-aV-MRw" firstAttribute="centerY" secondItem="i7R-7R-kAw" secondAttribute="centerY" constant="-10" id="m8a-hN-QK6"/>
-                                    <constraint firstItem="OVV-CR-7XL" firstAttribute="top" secondItem="i7R-7R-kAw" secondAttribute="top" constant="10" id="ml5-lF-rMy"/>
+                                    <constraint firstItem="Ic0-aV-MRw" firstAttribute="centerY" secondItem="i7R-7R-kAw" secondAttribute="centerY" constant="-12" id="m8a-hN-QK6"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="bottomPromptLabel" destination="nl7-Tv-v26" id="GAg-M0-WaE"/>
                                     <outlet property="delegate" destination="Vwv-7l-Pgq" id="eMX-nV-3tr"/>
                                     <outlet property="loginButton" destination="OVV-CR-7XL" id="6qy-8K-m6r"/>
+                                    <outlet property="loginPromptLabel" destination="WRA-3k-bX6" id="G3J-2k-KUH"/>
                                     <outlet property="sendButton" destination="GFl-sp-KPY" id="lpD-9x-SYp"/>
                                     <outlet property="textView" destination="JKz-RM-aIq" id="9vj-G3-yWX"/>
                                     <outlet property="topPromptLabel" destination="Ic0-aV-MRw" id="PeT-64-9It"/>
