全局搜索错别字，秒推

--- a/mia/Views/Common/HXInfectUserListView/HXInfectUserListView.xib
+++ b/mia/Views/Common/HXInfectUserListView/HXInfectUserListView.xib
@@ -30,7 +30,7 @@
                                         <action selector="closeButtonPressed" destination="iN0-l3-epB" eventType="touchUpInside" id="lUn-dG-ZVe"/>
                                     </connections>
                                 </button>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="秒推人数" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ru1-2j-Pz8">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="妙推人数" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ru1-2j-Pz8">
                                     <rect key="frame" x="106" y="30" width="68" height="21"/>
                                     <animations/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
